# convert2sfrm

./: BioMAX2sfrm.py  README.md  pyproject.toml
BioMAX2sfrm/: __init__.py  functions.py  scripts.py
convert2sfrm/: __init__.py  classes.py  functions.py  scripts.py
lib/: classes.py
